Fixed reply overflow

--- a/src/components/reply-card/styles.scss
+++ b/src/components/reply-card/styles.scss
@@ -30,9 +30,7 @@
   }
 
   &__message {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    overflow-y: scroll;
     padding: 5px;
     border-left: 2px solid theme.$color-primary-5;
     color: themeDeprecated.$font-color-primary;
@@ -40,5 +38,6 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
+    max-height: 200px;
   }
 }
